MB-49858: Add bloom_filter_memory stat

Expose a per-vBucket and per-Bucket stat for the size (in Bytes) of
the ep-engine Bloom filters.

* Per vBucket stat is named 'bloom_filter_memory', available via
  'vbucket-details' stat call.

* Bucket-level stat is named 'vb_bloom_filter_memory' via mcbp stat
  API, or vb_{state}_bloom_filter_memory via Prometheus.

Change-Id: Ifeb60b5f03ad6ee13c6a5ce3385b378bf7b9a551
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/167377
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Paolo Cocchi <paolo.cocchi@couchbase.com>
Reviewed-by: Jim Walker <jim@couchbase.com>