engines/ep/src/kv_bucket.cc
@@ -1340,6 +1340,8 @@ void KVBucket::appendAggregatedVBucketStats(
         stateCol.addStat(Key::vb_ht_item_memory, visitor.getItemMemory());
         stateCol.addStat(Key::vb_ht_item_memory_uncompressed,
                          visitor.getUncompressedItemMemory());
+        stateCol.addStat(Key::vb_bloom_filter_memory,
+                         visitor.getBloomFilterMemory());
         stateCol.addStat(Key::vb_ops_create, visitor.getOpsCreate());
         stateCol.addStat(Key::vb_ops_update, visitor.getOpsUpdate());
         stateCol.addStat(Key::vb_ops_delete, visitor.getOpsDelete());
